Further Hugo adjustments
Fixed linking between index and faq page
Updated thank-you and prelaunch pages to md for hugo rendering
Changed filesystem organization per Hugo specification

--- a/config.toml
+++ b/config.toml
@@ -3,11 +3,13 @@ languageCode = "en-us"
 title = "Vibe LTD - Chocolate, Coffee, and Cannabis Monthly Subscription"
 copyright = " Vibe LTD. All Rights reserved."
 
+SectionPagesMenu = "main"
+
 [[menu.main]]
   name = "Frequently Asked Questions"
   weight = -110
-  identifier = "faq"
-  url = "/faq/"
+  identifier = "frequently-asked-questions"
+  url = "/frequently-asked-questions/"
 
 [[menu.main]]
   name = "Prelaunch Signup"
