--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -11,7 +11,7 @@ public_folder: "img"
 collections:
 - name: "content" 
   label: "Content" 
-  folder: "content/site-title.md"
+  folder: "content/"
   create: true 
   slug: "{{year}}-{{month}}-{{day}}-{{slug}}" 
   fields: 
